--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 import matplotlib.pyplot as plt
 
-matplotlib==3.8.0
-numpy==1.25.2
-pandas==2.1.4
-seaborn==0.13.0
-streamlit==1.26.0
+matplotlib
+numpy
+pandas
+seaborn
+streamlit
